[package]
name = "xavyo-authorization"
version = "0.1.0"
edition = "2021"
description = "Fine-grained authorization engine (PDP) for xavyo"
license = "BSL-1.1"
repository = "https://github.com/xavyo/xavyo"

[dependencies]
# Internal dependencies
xavyo-core = { path = "../xavyo-core" }
xavyo-db = { path = "../xavyo-db" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Logging
tracing = "0.1"

# In-memory cache
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "policy_eval"
harness = false

[features]
default = []
integration = []
