[package]
name = "xavyo-connector-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Database connector for xavyo provisioning"

[dependencies]
# Core connector
xavyo-connector = { path = "../xavyo-connector" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
