[package]
name = "xavyo-connector-rest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic REST connector for xavyo provisioning"

[dependencies]
# Core connector
xavyo-connector = { path = "../xavyo-connector" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.5"
base64 = "0.22"

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = "0.6"
