[package]
name = "xavyo-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Core connector abstractions for xavyo provisioning"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Regex for transform expressions
regex = "1"

# Encryption
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# OpenAPI documentation
utoipa = { workspace = true, optional = true }

[features]
default = []
openapi = ["dep:utoipa"]

[dev-dependencies]
tokio-test = { workspace = true }
