[package]
name = "xavyo-db"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL database layer with multi-tenant RLS support for xavyo"
license = "BSL-1.1"
publish = false

[dependencies]
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "rust_decimal", "json"] }
tokio = { version = "1.35", features = ["full"] }
xavyo-core = { path = "../xavyo-core" }
xavyo-nhi = { path = "../xavyo-nhi", features = ["sqlx"] }
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
utoipa = { workspace = true, optional = true }
argon2 = { version = "0.5", optional = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
integration = []  # Feature flag for integration tests requiring real PostgreSQL
openapi = ["utoipa", "xavyo-nhi/openapi"]  # Enable OpenAPI schema generation for models
argon2 = ["dep:argon2"]  # Enable Argon2 password hashing for credential verification
